--- a/noticias.html
+++ b/noticias.html
@@ -27,7 +27,7 @@
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
-<body class="atid">
+<body class="noticias sin-fondo">
 <nav class="navbar navbar-default">
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -56,68 +56,86 @@
 </nav>
 <header class="container-fluid texto-blanco">
   <div class="col-md-8 col-md-offset-2 text-center">
-    <h1>ATID</h1>
+    <h1>Noticias</h1>
     <hr>
-    <h3>El Sueño</h3>
-    <p>Avanzar de manera importante en:<br>
-      Excelencia Académica<br>
-      Valores, clima de respeto y disciplina<br>
-      Proyecto Judaico </p>
   </div>
 </header>
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
-    <div class="col-md-12">
-      <p>Hace casi 10 años comenzamos a trabajar en equipo para hacer del IH “El orgullo de nuestra comunidad”.
-        Hicimos un diagnóstico del IH. Hablamos con todos los actores, directores, profesores, apoderados (Cadem 2009). </p>
-      <hr>
+  <article>
+    <div class="col-md-2">
+      <p>27 / 05 / 2016 </p>
     </div>
-    <div class="col-md-6">
-      <p>Hoy los indicadores internos del colegio muestran que se han cumplido los objetivos propuestos, medidos nuevamente por la encuesta 2015:</p>
-      <ul>
-        <li>La satisfacción con el colegio aumentó de manera notable
-          A pesar de que la excelencia académica ha mejorado mucho, sigue siendo el área donde tenemos que mejorar aun más.</li>
-        <li> El avance en lo académico requiere hacernos cargo de la diversidad de capacidades y manera de aprender de nuestros alumnos, también acogiendo mejor las necesidades de los niños con más dificultades.</li>
-        <li>La infraestructura aumenta su relevancia como demanda, especialmente como mejora de aquellos elementos al servicio de los procesos de enseñanza aprendizaje. </li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <p> En 2016, nos encontramos muy satisfechos con los logros y al mismo tiempo surgen nuevos grandes desafíos que nos llevan a pensar en siguiente etapa.  No queremos quedarnos en la zona de confort, el desafío ahora es mucho más grande: </p>
-      <ul>
-        <li>Necesitamos responder al mismo tiempo a la demanda de una <strong>mayor excelencia académica</strong> aun (queremos ser referentes nacionales) y a la demanda de hacernos cargo seriamente de la <strong>diversidad</strong> de nuestra comunidad de alumnos, elemento que nos distingue y enorgullece.</li>
-        <li>Queremos fortalecer aun más el <strong>proyecto judaico</strong>, que es la esencia de lo que nos define y diferencia de cualquier otro colegio en Chile.</li>
-        <li>Queremos asegurar la posibilidad de que todos puedan seguir <strong>acced</strong>iendo a las becas para pode ser parte del IH, cosa que se hace cada vez más difícil. </li>
-      </ul>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-6 col-md-offset-3 text-center">
-      <p><strong>Se suman ahora dos nuevos elementos a nuestro desafío: </strong></p>
-      <p>Una nueva situación relativa a la seguridad del lugar en que está nuestro colegio.</p>
-      <p> La imposibilidad de seguir creciendo en Gan, que es la fuente de crecimiento del colegio </p>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-10">
-      <h4>¿Qué hemos hecho?</h4>
+    <div class="col-md-8">
+      <p><strong>Vaad Hajinuj busca respaldo para cambio de ubicación del Instituto Hebreo</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="que-hemos-hecho.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
+      <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
-    <div class="col-md-12">
+        <div class="col-md-12">
       <hr>
     </div>
-    <div class="col-md-10">
-      <h4>Nuestra Propuesta</h4>
+    </article>
+    <article>
+
+    <div class="col-md-2">
+      <p>06 / 05 / 2016<br>
+      </p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Comunicación del Vaad Hajinuj</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
+      <p><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+    </div>
+
+    <div class="col-md-12">
+      <hr>
+    </div>
+    </article>
+    <article>
+    <div class="col-md-2">
+      <p>06 / 05 / 2016 </p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>HISTÓRICO: Instituto Hebreo y Estadio Israelita Maccabi sueñan juntos el futuro de la Comunidad</strong></p>
+    </div>
+    <div class="col-md-2 text-right">
+      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
+    </div>
+    
+    <div class="col-md-12">
+      <hr>
+    </div>
+    </article>
+    <article>
+    <div class="col-md-2">
+      <p>06 / 05 / 2016 </p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Llamado a Kinus genera alto interés de padres y alumnos</strong></p>
+    </div>
+    <div class="col-md-2 text-right">
+      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
     </div>
     <div class="col-md-12">
       <hr>
     </div>
+    </article>
+    <article>
+    <div class="col-md-2">
+      <p>06 / 05 / 2016 </p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>La CJCh asume rol fundamental en el proyecto Atid</strong></p>
+    </div>
+    <div class="col-md-2 text-right">
+      <p><a href="nuestra-propuesta.html"><em class="fa fa-angle-right" aria-hidden="true"></em> Ver detalle</a></p>
+    </div>
+    <div class="col-md-12">
+      <hr>
+    </div>
+    </article>
   </div>
 </section>
 <footer class="fondo_celeste footer">
@@ -125,9 +143,9 @@
     <p>© 2016 - Derechos reservados </p>
   </div>
 </footer>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.js"></script>
-<script src="js/wow.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="js/bootstrap.js"></script> 
+<script src="js/wow.min.js"></script> 
 <script>
 	new WOW().init();
 </script>
