--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
 <!-- General-->
-<link href="css/atid.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/atid.css?v=1.2" rel="stylesheet" type="text/css" media="screen">
 <link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
 <link href="jQueryAssets/jquery-ui.theme.min.css" rel="stylesheet" type="text/css">
 <link href="jQueryAssets/jquery.ui.accordion.min.css" rel="stylesheet" type="text/css">
@@ -32,7 +32,7 @@
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
-<body>
+<body class="inicio">
 <nav class="navbar navbar-default">
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,22 +44,22 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">¿Qué Hemos Hecho?</a></li>
-            <li><a href="#">Nuestra Propuesta</a></li>
+            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
-        <li><a href="#">Kinus</a></li>
-        <li><a href="#">Vaad Hajinuj</a></li>
+        <li><a href="kinus.html">Kinus</a></li>
+        <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
         <li><a href="#">Preguntas Frecuentes</a></li>
-        <li><a href="#">Noticias</a></li>
-        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
   </div>
   <!-- /.container-fluid --> 
 </nav>
-<div class="container-fluid">
+<section class="container-fluid">
   <div class="row">
     <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -89,8 +89,8 @@
       </div>
       <a class="left carousel-control" href="#carousel1" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel1" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a></div>
   </div>
-</div>
-<div class="container-fluid movamonos">
+</section>
+<section class="container-fluid movamonos">
   <div class="row">
     <div class="col-md-6 seccion fondo_movamonos"></div>
     <div class="col-md-6 seccion">
@@ -118,8 +118,8 @@
       </div>
     </div>
   </div>
-</div>
-<div class="container-fluid actividades">
+</section>
+<section class="container-fluid actividades">
   <h1>ACTIVIDADES ATID</h1>
   <div class="col-md-8 col-md-offset-2">
     <div class="col-md-6 subseccion fondo_negro wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
@@ -147,8 +147,8 @@
       </form>
     </div>
   </div>
-</div>
-<div class="container-fluid preguntas fondo_celeste">
+</section>
+<section class="container-fluid preguntas fondo_celeste">
   <div class="row">
     <div class="col-md-6 subseccion fondo_blanco">
       <div class="col-md-10 col-md-offset-1 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
@@ -214,26 +214,26 @@
       </div>
     </div>
   </div>
-</div>
-<div class="container-fluid queremos">
+</section>
+<section class="container-fluid queremos">
   <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-    <p>Queremos un diálogo abierto con todos los actores de la Comunidad, para transformar este sueño en un proyecto de todos donde tengamos espacio para informarnos, expresar nuestra opinión y llegar a un Kinus con un proyecto que exprese a la Comunidad de la mejor manera posible. </p>
+    <h4>Queremos un diálogo abierto con todos los actores de la Comunidad, para transformar este sueño en un proyecto de todos donde tengamos espacio para informarnos, expresar nuestra opinión y llegar a un Kinus con un proyecto que exprese a la Comunidad de la mejor manera posible. </h4>
   </div>
-</div>
-<div class="container-fluid documentos">
+</section>
+<section class="container-fluid documentos">
   <div class="col-md-6 col-md-offset-3 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
     <h1>documentos </h1>
-    <p>Oops!, al parecer aún no hay nada para ver aquí. </p>
+    <h4>Oops!, al parecer aún no hay nada para ver aquí. </h4>
   </div>
-</div>
+</section>
 <footer class="fondo_celeste">
   <div class="container-fluid text-center">
     <p>© 2016 - Derechos reservados </p>
   </div>
 </footer>
 
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="js/bootstrap.js"></script> 
 <script type="text/javascript">
 $(function() {
 	$( "#Accordion1" ).accordion({
@@ -243,8 +243,8 @@ $(function() {
   active: false 
 	}); 
 });
-</script>
- <script src="js/wow.min.js"></script>
+</script> 
+<script src="js/wow.min.js"></script> 
 <script>
 	new WOW().init();
 </script>
