--- a/que-hemos-hecho.html
+++ b/que-hemos-hecho.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Atid - Instituto Hebreo</title>
+<title>Atid - Qué Hemos Hecho</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/carousel_fade.css" rel="stylesheet" type="text/css" media="screen">
@@ -27,9 +27,9 @@
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
-<body class="atid">
+<body class="que-hemos-hecho">
 <nav class="navbar navbar-default">
-  <div class="container-fluid"> 
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -43,84 +43,66 @@
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
-        <li><a href="kinus.html">Kinus</a></li>
+        <li><a href="#">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
         <li><a href="#">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
         <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
-    <!-- /.navbar-collapse --> 
+    <!-- /.navbar-collapse -->
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <header class="container-fluid texto-blanco">
-  <div class="col-md-8 col-md-offset-2 text-center">
-    <h1>ATID</h1>
+  <div class="col-md-8 col-md-offset-2 text-center contenido">
+    <h1>¿Qué hemos hecho?</h1>
     <hr>
-    <h3>El Sueño</h3>
-    <p>Avanzar de manera importante en:<br>
-      Excelencia Académica<br>
-      Valores, clima de respeto y disciplina<br>
-      Proyecto Judaico </p>
+    <p>Evaluamos múltiples alternativas Evaluamos experiencias pasadas dentro y fuera de la comunidad Seleccionamos las más realistas, posibles, viables, no por eso menos ambiciosas Avanzamos todo lo que podíamos bajo nuestra potestad de directorio, ahora corresponde someter a aprobación de la asamblea el camino que recomendamos como directorio y que creemos es el más adecuado para cumplir el sueño</p>
   </div>
 </header>
 <section class="container-fluid">
-  <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
-    <div class="col-md-12">
-      <p>Hace casi 10 años comenzamos a trabajar en equipo para hacer del IH “El orgullo de nuestra comunidad”.
-        Hicimos un diagnóstico del IH. Hablamos con todos los actores, directores, profesores, apoderados (Cadem 2009). </p>
+  <div class="col-md-10 col-md-offset-1 fondo_blanco">
+        <div class="col-md-12">
+        <h2>Alternativas Evaluadas </h2>
       <hr>
-    </div>
+      </div>
     <div class="col-md-6">
-      <p>Hoy los indicadores internos del colegio muestran que se han cumplido los objetivos propuestos, medidos nuevamente por la encuesta 2015:</p>
       <ul>
-        <li>La satisfacción con el colegio aumentó de manera notable
-          A pesar de que la excelencia académica ha mejorado mucho, sigue siendo el área donde tenemos que mejorar aun más.</li>
-        <li> El avance en lo académico requiere hacernos cargo de la diversidad de capacidades y manera de aprender de nuestros alumnos, también acogiendo mejor las necesidades de los niños con más dificultades.</li>
-        <li>La infraestructura aumenta su relevancia como demanda, especialmente como mejora de aquellos elementos al servicio de los procesos de enseñanza aprendizaje. </li>
+        <li> Quedarnos aquí y reacomodarnos/vender parte del terreno</li>
+        <li>Integrarnos a otra comunidad actual:
+          <ul>
+            <li>Mudarnos al EIM</li>
+            <li>Mudarnos al Club de Golf La Dehesa</li>
+          </ul>
+        </li>
+        <li>Comprar otro inmueble escolar (ej Colegio Apoquindo)</li>
+        <li>Comprar un nuevo terreno y construir un nuevo colegio, considerando: 
+          <ul>
+            <li> Factibilidad económica: debe emplazarse en un terreno cuyo costo sea significativamente menor al terreno actual.</li>
+            <li> Para ello, el nuevo probablemente debería estar en una franja llamada “cota 900 o 1000”. Ahí es donde se están reubicando muchos colegios. </li>
+          </ul>
+        </li>
       </ul>
     </div>
     <div class="col-md-6">
-      <p> En 2016, nos encontramos muy satisfechos con los logros y al mismo tiempo surgen nuevos grandes desafíos que nos llevan a pensar en siguiente etapa.  No queremos quedarnos en la zona de confort, el desafío ahora es mucho más grande: </p>
       <ul>
-        <li>Necesitamos responder al mismo tiempo a la demanda de una <strong>mayor excelencia académica</strong> aun (queremos ser referentes nacionales) y a la demanda de hacernos cargo seriamente de la <strong>diversidad</strong> de nuestra comunidad de alumnos, elemento que nos distingue y enorgullece.</li>
-        <li>Queremos fortalecer aun más el <strong>proyecto judaico</strong>, que es la esencia de lo que nos define y diferencia de cualquier otro colegio en Chile.</li>
-        <li>Queremos asegurar la posibilidad de que todos puedan seguir <strong>acced</strong>iendo a las becas para pode ser parte del IH, cosa que se hace cada vez más difícil. </li>
+        <li> Radio: analizando donde viven los apoderados del IH, estimamos que el nuevo colegio debería emplazarse en un lugar que este a no mas de 20 o 30 minutos de la instalación actual. Dicho radio acotó significativamente nuestras opciones de terrenos (ej: Chicureo).</li>
+        <li>Hemos visto cerca de 12 terrenos en La Dehesa, Los Trapenses, Las Condes, Quinchamalí, La Reina, San Carlos, El Arrayán y estamos entre estos 3 por estas razones:        </li>
+        <li>Factibilidad arquitectónica &amp; urbanística: hicimos una serie de estudios de cabida encargados a la empresa URBE, considerando temas técnicos como condiciones de futuro impacto vial, seguridad, desarrollo urbano, etc.
+        </li>
+        <li>Seguridad: Estos terrenos son generalmente más amplios y aislado, lo que nos permitiría desarrollar un colegio desde cero dándole la importancia necesaria a la seguridad </li>
       </ul>
     </div>
     <div class="col-md-12">
       <hr>
     </div>
-    <div class="col-md-6 col-md-offset-3 text-center">
-      <p><strong>Se suman ahora dos nuevos elementos a nuestro desafío: </strong></p>
-      <p>Una nueva situación relativa a la seguridad del lugar en que está nuestro colegio.</p>
-      <p> La imposibilidad de seguir creciendo en Gan, que es la fuente de crecimiento del colegio </p>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-10">
-      <h4>¿Qué hemos hecho?</h4>
-    </div>
-    <div class="col-md-2 text-right">
-      <h4><a href="que-hemos-hecho.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-10">
-      <h4>Nuestra Propuesta</h4>
-    </div>
-    <div class="col-md-2 text-right">
-      <h4><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
-    </div>
-    <div class="col-md-12">
-      <hr>
+    <div class="col-md-2">
+      <h4><a href="atid.html"><i class="fa fa-angle-left" aria-hidden="true"></i> Volver</a></h4>
     </div>
   </div>
 </section>
-<footer class="fondo_celeste footer">
+<footer class="fondo_celeste">
   <div class="container-fluid text-center">
     <p>© 2016 - Derechos reservados </p>
   </div>
