--- a/vaad-hajinuj.html
+++ b/vaad-hajinuj.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Atid - Instituto Hebreo</title>
+<title>Atid - Vaad Hajinuj</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/carousel_fade.css" rel="stylesheet" type="text/css" media="screen">
@@ -27,9 +27,9 @@
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
-<body class="atid">
+<body class="vaad">
 <nav class="navbar navbar-default">
-  <div class="container-fluid"> 
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -50,77 +50,83 @@
         <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
-    <!-- /.navbar-collapse --> 
+    <!-- /.navbar-collapse -->
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <header class="container-fluid texto-blanco">
-  <div class="col-md-8 col-md-offset-2 text-center">
-    <h1>ATID</h1>
+  <div class="col-md-8 col-md-offset-2 text-center contenido">
+    <h1>Vaad Hajinuj</h1>
     <hr>
-    <h3>El Sueño</h3>
-    <p>Avanzar de manera importante en:<br>
-      Excelencia Académica<br>
-      Valores, clima de respeto y disciplina<br>
-      Proyecto Judaico </p>
+    <p>Su misión estratégica es dar orientaciones formativas, fijar los objetivos y metas educativas, establecer las políticas corporativas, líneas de acción y directrices de acuerdo a los principios que define la Comisión de Educación de la Comunidad Judía de Chile.</p>
   </div>
 </header>
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
+        <div class="row col-md-12">
+        <div class="col-md-10">
+        <p>Al Vaad Hajinuj le corresponde por una parte, gestionar profesional y ejecutivamente las instituciones comunitarias de Educación en Chile, a fin de lograr cualitativa y cuantitativamente las metas y objetivos, en el conjunto de entidades educativas judeosionistas, como de cada una de ellas, operando como unidades autónomas, independientes y a la vez, relacionadas e integradas. </p>
+        </div>
+        <div class="col-md-2 text-center">
+        <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/>
+        </div>
+      </div>
+<div class="col-md-12">
+        <hr>
+</div>
+            <div class="col-md-4">
+        <p><strong>Misión Estatutaria</strong></p>
+        <p>El Vaad Hajinuj es una Corporación Educacional de Derecho Privado, sin fines de lucro que tiene como principal finalidad “velar para que los hijos de  los miembros de la Comunidad Judía de toda la República, se eduquen en el espíritu nacional chileno y reciban, además de la educación comprendida en los programas oficiales de estudio, una educación de cultura y tradiciones judías”. </p>
+      </div>
+            <div class="col-md-4">
+        <p><strong>Misión Estratégica</strong></p>
+        <p>El Vaad Hajinuj es el máximo organismo del Instituto Hebreo. Su misión estratégica es la de dar las orientaciones formativas, fijar los objetivos y metas educativas; velar por su adecuada ejecución y cumplimiento, estableciendo las políticas corporativas.
+Responsable del control de gestión, aprobación del presupuesto anual y de proveer los recursos necesarios para llevar adelante el Proyecto Educativo Institucional del Instituto Hebreo.</p>
+      </div>
+            <div class="col-md-4">
+        <p><strong>Visión</strong></p>
+        <p>Posicionar y proyectar al Instituto Hebreo como la principal Institución Educativa, orgullo de la Comunidad Judía en Chile y como referente de innovación educativa a nivel nacional.
+La Identidad Judía, la Excelencia Académica y la Formación Valórica son los pilares fundamentales de una educación inclusiva, en un clima escolar amigable y de respeto entre todos sus miembros.</p>
+      </div>
     <div class="col-md-12">
-      <p>Hace casi 10 años comenzamos a trabajar en equipo para hacer del IH “El orgullo de nuestra comunidad”.
-        Hicimos un diagnóstico del IH. Hablamos con todos los actores, directores, profesores, apoderados (Cadem 2009). </p>
+    <hr>
+    </div>
+    <div class="col-md-4">
+      <p><strong>Integrantes del Directorio:</strong></p>
+        <p>Alejandro Fosk Belan - Presidente<br>
+          Ezequiel Klas Weinstein - Director<br>
+          Jacqueline Rosenberg Gurovich - Directora<br>
+          Karen Thal Silberstein - Directora<br>
+          Marcelo Blechman Schwarz - Director<br>
+          Alan Farcas Guendelman - Director<br>
+          Andres Belfus Sheller - Director
+          Herman Schupper Messcher - Director
+          Lucy Krell Wainstein - Directora</p>
+        </div>
+     <div class="col-md-12">
       <hr>
     </div>
-    <div class="col-md-6">
-      <p>Hoy los indicadores internos del colegio muestran que se han cumplido los objetivos propuestos, medidos nuevamente por la encuesta 2015:</p>
-      <ul>
-        <li>La satisfacción con el colegio aumentó de manera notable
-          A pesar de que la excelencia académica ha mejorado mucho, sigue siendo el área donde tenemos que mejorar aun más.</li>
-        <li> El avance en lo académico requiere hacernos cargo de la diversidad de capacidades y manera de aprender de nuestros alumnos, también acogiendo mejor las necesidades de los niños con más dificultades.</li>
-        <li>La infraestructura aumenta su relevancia como demanda, especialmente como mejora de aquellos elementos al servicio de los procesos de enseñanza aprendizaje. </li>
-      </ul>
+    <div class="col-md-10">
+      <h4>Descargar Estatutos Vaad Hajinuj</h4>
     </div>
-    <div class="col-md-6">
-      <p> En 2016, nos encontramos muy satisfechos con los logros y al mismo tiempo surgen nuevos grandes desafíos que nos llevan a pensar en siguiente etapa.  No queremos quedarnos en la zona de confort, el desafío ahora es mucho más grande: </p>
-      <ul>
-        <li>Necesitamos responder al mismo tiempo a la demanda de una <strong>mayor excelencia académica</strong> aun (queremos ser referentes nacionales) y a la demanda de hacernos cargo seriamente de la <strong>diversidad</strong> de nuestra comunidad de alumnos, elemento que nos distingue y enorgullece.</li>
-        <li>Queremos fortalecer aun más el <strong>proyecto judaico</strong>, que es la esencia de lo que nos define y diferencia de cualquier otro colegio en Chile.</li>
-        <li>Queremos asegurar la posibilidad de que todos puedan seguir <strong>acced</strong>iendo a las becas para pode ser parte del IH, cosa que se hace cada vez más difícil. </li>
-      </ul>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-6 col-md-offset-3 text-center">
-      <p><strong>Se suman ahora dos nuevos elementos a nuestro desafío: </strong></p>
-      <p>Una nueva situación relativa a la seguridad del lugar en que está nuestro colegio.</p>
-      <p> La imposibilidad de seguir creciendo en Gan, que es la fuente de crecimiento del colegio </p>
+    <div class="col-md-2 text-right">
+      <h4><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
     </div>
     <div class="col-md-12">
       <hr>
     </div>
     <div class="col-md-10">
-      <h4>¿Qué hemos hecho?</h4>
+      <h4>Descargar Memoria de Gestión Vaad Hajinuj 2012 - 2013</h4>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="que-hemos-hecho.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
-    </div>
-    <div class="col-md-12">
-      <hr>
-    </div>
-    <div class="col-md-10">
-      <h4>Nuestra Propuesta</h4>
-    </div>
-    <div class="col-md-2 text-right">
-      <h4><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
+      <h4><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
     </div>
     <div class="col-md-12">
       <hr>
     </div>
   </div>
 </section>
-<footer class="fondo_celeste footer">
+<footer class="fondo_celeste">
   <div class="container-fluid text-center">
     <p>© 2016 - Derechos reservados </p>
   </div>
