--- a/lista.html
+++ b/lista.html
@@ -14,7 +14,7 @@
 <link href="css/animate.min.css" rel="stylesheet" type="text/css" media="screen">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 <!-- General-->
-<link href="css/atid.css?v=1.2" rel="stylesheet" type="text/css" media="screen">
+<link href="css/template.css?v=1.3" rel="stylesheet" type="text/css" media="screen">
 <link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
 <link href="jQueryAssets/jquery-ui.theme.min.css" rel="stylesheet" type="text/css">
 <link href="jQueryAssets/jquery.ui.accordion.min.css" rel="stylesheet" type="text/css">
@@ -27,33 +27,36 @@
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
 </head>
-<body class="noticias sin-fondo">
-<nav class="navbar navbar-default">
-  <div class="container-fluid"> 
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="index.html"><img src="img/logo_menu_superior.png" width="auto" height="80" alt=""/></a></div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="defaultNavbar1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
-            <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
-          </ul>
-        </li>
-        <li><a href="kinus.html">Kinus</a></li>
-        <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
-        <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse --> 
-  </div>
-  <!-- /.container-fluid --> 
-</nav>
+<body class="noticias sin_fondo">
+  <nav class="navbar navbar-default">
+      <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+              <a class="navbar-brand" href="index.html"><img src="http://placehold.it/80x80/6b15a1/fff?text=Logo" width="auto" height="80" alt="" /></a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="defaultNavbar1">
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="dropdown">
+                    <a href="imagen_fondo.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">
+                      Imagen Fondo<span class="caret"></span>
+                    </a>
+                      <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">Sub Menú</a></li>
+                      </ul>
+                  </li>
+                  <li><a href="sin_imagen.html">Sin Imagen</a></li>
+                  <li><a href="lista.html">Lista</a></li>
+                  <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+  </nav>
 <header class="container-fluid texto-blanco">
   <div class="col-md-8 col-md-offset-2 text-center">
     <h1>Noticias</h1>
@@ -67,10 +70,10 @@
       <p>27 / 05 / 2016 </p>
     </div>
     <div class="col-md-8">
-      <p><strong>Vaad Hajinuj busca respaldo para cambio de ubicación del Instituto Hebreo</strong></p>
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quibusdam.</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+      <p><a href="sub-menu.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
         <div class="col-md-12">
       <hr>
@@ -83,7 +86,7 @@
       </p>
     </div>
     <div class="col-md-8">
-      <p><strong>Comunicación del Vaad Hajinuj</strong></p>
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, eveniet.</strong></p>
     </div>
     <div class="col-md-2 text-right">
       <p><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
@@ -98,12 +101,12 @@
       <p>06 / 05 / 2016 </p>
     </div>
     <div class="col-md-8">
-      <p><strong>HISTÓRICO: Instituto Hebreo y Estadio Israelita Maccabi sueñan juntos el futuro de la Comunidad</strong></p>
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, expedita.</strong></p>
     </div>
     <div class="col-md-2 text-right">
       <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
     </div>
-    
+
     <div class="col-md-12">
       <hr>
     </div>
@@ -113,7 +116,7 @@
       <p>06 / 05 / 2016 </p>
     </div>
     <div class="col-md-8">
-      <p><strong>Llamado a Kinus genera alto interés de padres y alumnos</strong></p>
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, sed!</strong></p>
     </div>
     <div class="col-md-2 text-right">
       <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
@@ -127,7 +130,7 @@
       <p>06 / 05 / 2016 </p>
     </div>
     <div class="col-md-8">
-      <p><strong>La CJCh asume rol fundamental en el proyecto Atid</strong></p>
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, labore.</strong></p>
     </div>
     <div class="col-md-2 text-right">
       <p><a href="nuestra-propuesta.html"><em class="fa fa-angle-right" aria-hidden="true"></em> Ver detalle</a></p>
@@ -143,9 +146,9 @@
     <p>© 2016 - Derechos reservados </p>
   </div>
 </footer>
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/bootstrap.js"></script> 
-<script src="js/wow.min.js"></script> 
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.js"></script>
+<script src="js/wow.min.js"></script>
 <script>
 	new WOW().init();
 </script>
