--- a/lista.html
+++ b/lista.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Atid - Instituto Hebreo</title>
+<title>Template Bootstrap Lista</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/carousel_fade.css" rel="stylesheet" type="text/css" media="screen">
@@ -73,7 +73,7 @@
       <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quibusdam.</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="sub-menu.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+      <p><a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
         <div class="col-md-12">
       <hr>
@@ -89,7 +89,7 @@
       <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, eveniet.</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+      <p><a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
 
     <div class="col-md-12">
@@ -104,7 +104,7 @@
       <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, expedita.</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
+      <p><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
     </div>
 
     <div class="col-md-12">
@@ -119,7 +119,7 @@
       <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, sed!</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
+      <p><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
     </div>
     <div class="col-md-12">
       <hr>
@@ -133,7 +133,7 @@
       <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, labore.</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><em class="fa fa-angle-right" aria-hidden="true"></em> Ver detalle</a></p>
+      <p><a href="#"><em class="fa fa-angle-right" aria-hidden="true"></em> Ver detalle</a></p>
     </div>
     <div class="col-md-12">
       <hr>
