--- a/atid.html
+++ b/atid.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,16 @@
     <![endif]-->
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80359842-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="atid">
 <nav class="navbar navbar-default">
@@ -39,15 +49,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="en-que-hemos-avanzado.html">¿En qué hemos avanzado?</a></li>
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
         <li><a href="kinus.html">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -58,37 +68,37 @@
   <div class="col-md-8 col-md-offset-2 text-center">
     <h1>ATID</h1>
     <hr>
-    <h3>El Sueño</h3>
-    <p>Avanzar de manera importante en:<br>
-      Excelencia Académica<br>
-      Valores, clima de respeto y disciplina<br>
-      Proyecto Judaico </p>
+    <h3>El Futuro</h3>
+    <p>En 2016, nos encontramos muy satisfechos con los logros de estos últimos años. Al mismo tiempo surgen nuevos y grandes desafíos que nos llevan a pensar en la siguiente etapa de desarrollo de nuestro colegio…  en la continuidad… El desafío ahora es mucho más grande.</p>
   </div>
 </header>
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
-    <div class="col-md-12">
-      <p>Hace casi 10 años comenzamos a trabajar en equipo para hacer del IH “El orgullo de nuestra comunidad”.
-        Hicimos un diagnóstico del IH. Hablamos con todos los actores, directores, profesores, apoderados (Cadem 2009). </p>
-      <hr>
+    <div class="col-md-6">
+      <p>El Proyecto ATID responde a velar por la continuidad de nuestra Institución y el poder asegurarnos que TODOS los alumnos que quieran estudiar en nuestro Instituto Hebreo lo puedan hacer, independiente de su condición económica, o de sus necesidades académicas, situaciones que no están resueltas en nuestra condición actual.</p>
+      <p>Cuando llegamos al directorio del Vaad Hajinuj hace ocho años, comenzamos a trabajar en equipo con el objetivo de convertir al Hebreo en &ldquo;El Orgullo de Nuestra Comunidad&rdquo;.</p>
+      <p>Sin mayor conocimiento del funcionamiento del colegio, hicimos un diagnóstico inicial. Hablamos con todos los actores de la comunidad educativa, directores, profesores, alumnos y realizamos una encuesta a los apoderados. De todo esto obtuvimos conclusiones importantes: debíamos enfocarnos en mejorar la educación, recuperar alumnos, fortalecer el financiamiento, y conformar un sólido equipo de gestión. Y eso fue lo que hicimos….</p>
+      <p>Con todos estos antecedentes construimos Nuestro Proyecto Educativo Institucional (PEI) que es la hoja de ruta a través de la cual cada aspecto del colegio está considerado en detalle, año por año, asignatura por asignatura, ciclo por ciclo. Es el documento que permite ser un colegio previsible, estable y de mejora continua.</p>
+      <p>Luego de 6 años los indicadores internos del colegio (PEI) nos muestran que se han cumplido en gran parte los objetivos propuestos Hemos tenido un importante aumento de matrícula (más de 200 alumnos nuevos en 6 años),  mejores resultados en el ámbito académico, en los rankings de medición a nivel nacional (PSU y Simce), en el ámbito valórico, mayor disciplina y otros que fueron medidos en una segunda encuesta a los apoderados, realizada en 2015. La satisfacción general con el colegio aumentó de manera notable pero al mismo tiempo surgieron algunos elementos  nuevos, que nos llevaron a pensar en el siguiente paso y abordar estos nuevos desafíos pensando en el futuro y la continuidad de nuestro colegio.</p>
+      <p><strong>Para todos estos desafíos se requieren recursos</strong>. Hoy nuestra realidad es que enfrentamos un problema de múltiples variables.</p>
+      <p>Por una parte nuestra institución tiene un perfil muy particular, cosa que nos enorgullece y queremos preservar en el tiempo. Históricamente entre un 20% y 30% de los apoderados recibe algún porcentaje de beca, y eso debe mantenerse. Estamos muy preocupados porque con el paso del tiempo nuestra comunidad ha ido cambiando, hoy la mayoría de las familias son de profesionales, para quienes no es fácil mantener una casa y pagar el colegio de sus hijos. Cada año se le hace más difícil a la Fundación Fobeju poder reunir los recursos necesarios para aportar las becas que necesitan nuestras familias.</p>
     </div>
     <div class="col-md-6">
-      <p>Hoy los indicadores internos del colegio muestran que se han cumplido los objetivos propuestos, medidos nuevamente por la encuesta 2015:</p>
+      <p>En términos de excelencia académica hemos mejorado mucho, pero tenemos que mejorar aún más. En la medida que aumentamos la exigencia, se hace evidente que aquellos niños que tienen necesidades académicas especiales no lo pasan bien en nuestro colegio. Tenemos que trabajar en sacar el máximo potencial de cada alumno de acuerdo a las distintas habilidades,  intereses y capacidades, y eso significa invertir en programas académicos, fortalecer y capacitar a los profesores, mejorar procedimientos y metodologías de manera de abordar profundamente nuestra diversidad de alumnos.       </p>
+      <p>Por otra parte, tenemos que asegurar que todas las familias que quieran enviar a sus hijos a nuestro colegio lo puedan hacer. Hoy, estamos limitados en nuestra capacidad de aceptar a dichas familias ya que nuestro Gan no puede crecer debido disposiciones municipales. Lo anterior es muy complejo, ya que ahí está la base de nuestros futuros alumnos.</p>
+      <p>Un nuevo aspecto que surgió como resultado de la encuesta a apoderados realizada el año pasado es el referente a la infraestructura y accesos a nuestro colegio. La infraestructura aumenta su relevancia como demanda, especialmente como mejora de aquellos elementos al servicio de los procesos de enseñanza aprendizaje. Lo mismo sucede con lo relativo a las vías de acceso, circulación, estacionamientos y seguridad del lugar en que está nuestro colegio.</p>
+      <p><strong>NUEVOS DESAFÍOS:</strong></p>
       <ul>
-        <li>La satisfacción con el colegio aumentó de manera notable
-          A pesar de que la excelencia académica ha mejorado mucho, sigue siendo el área donde tenemos que mejorar aun más.</li>
-        <li> El avance en lo académico requiere hacernos cargo de la diversidad de capacidades y manera de aprender de nuestros alumnos, también acogiendo mejor las necesidades de los niños con más dificultades.</li>
-        <li>La infraestructura aumenta su relevancia como demanda, especialmente como mejora de aquellos elementos al servicio de los procesos de enseñanza aprendizaje. </li>
+        <li><strong>Necesitamos responder al mismo tiempo a la demanda de una mayor excelencia académica (queremos ser referentes nacionales) y a la demanda trabajar seriamente con la diversidad (académica y económica) de nuestra comunidad de alumnos, elemento que nos distingue y enorgullece.</strong></li>
+        <li><strong>Queremos fortalecer aún más el proyecto judaico sólido, moderno, inclusivo y plural, que es la esencia de lo que nos define como colegio.</strong></li>
+        <li><strong>Queremos asegurar que todos quienes lo requieran, puedan seguir accediendo a las becas para poder ser parte del Hebreo, cosa que se hace cada vez más difícil.</strong></li>
+        <li><strong>Queremos resolver los problemas relativos a las vías de acceso, circulación, estacionamientos y seguridad del lugar en que está nuestro colegio.</strong></li>
+        <li><strong>Queremos seguir creciendo, y poder asegurar que todos los niños que quieran estudiar en nuestro colegio lo puedan hacer.</strong></li>
       </ul>
+      <p>Considerando todos los antecedentes y con la responsabilidad de pensar en el futuro de las siguientes generaciones, como Vaad Hajinuj estamos convencidos de que este es el momento de pensar seriamente en una solución de largo plazo que asegure la continuidad y calidad de la educación judía en Chile. <strong>Este es el proyecto ATID.</strong></p>
     </div>
-    <div class="col-md-6">
-      <p> En 2016, nos encontramos muy satisfechos con los logros y al mismo tiempo surgen nuevos grandes desafíos que nos llevan a pensar en siguiente etapa.  No queremos quedarnos en la zona de confort, el desafío ahora es mucho más grande: </p>
-      <ul>
-        <li>Necesitamos responder al mismo tiempo a la demanda de una <strong>mayor excelencia académica</strong> aun (queremos ser referentes nacionales) y a la demanda de hacernos cargo seriamente de la <strong>diversidad</strong> de nuestra comunidad de alumnos, elemento que nos distingue y enorgullece.</li>
-        <li>Queremos fortalecer aun más el <strong>proyecto judaico</strong>, que es la esencia de lo que nos define y diferencia de cualquier otro colegio en Chile.</li>
-        <li>Queremos asegurar la posibilidad de que todos puedan seguir <strong>acced</strong>iendo a las becas para pode ser parte del IH, cosa que se hace cada vez más difícil. </li>
-      </ul>
-    </div>
+    
+    <div style="display:none">
     <div class="col-md-12">
       <hr>
     </div>
@@ -104,7 +114,7 @@
       <h4>¿Qué hemos hecho?</h4>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="que-hemos-hecho.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
+      <h4><a href="en-que-hemos-avanzado.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </h4>
     </div>
     <div class="col-md-12">
       <hr>
@@ -117,6 +127,7 @@
     </div>
     <div class="col-md-12">
       <hr>
+    </div>
     </div>
   </div>
 </section>
