--- a/nuestra-propuesta.html
+++ b/nuestra-propuesta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,16 @@
     <![endif]-->
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80359842-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="nuestra-propuesta sin-fondo">
 <nav class="navbar navbar-default">
@@ -39,15 +49,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="en-que-hemos-avanzado.html">¿En qué hemos avanzado?</a></li>
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
         <li><a href="kinus.html">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -63,10 +73,10 @@
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
     <div class="col-md-12">
-      <p>Buscar una ubicación nueva y mucho más económica que la actual, a una distancia no mayor a 20-30 minutos de la actual, donde construir un nuevo colegio con infraestructura y costos operativos similares a los actuales pero mejorando lo necesario (ej. Seguridad, Flexibilidad para crecer a futuro) Y que al mismo tiempo quede como resultado un fondo pro-becas para financiar las necesidades económicas y apoyar la labor que realiza la Fundación Fobeju para estos fines. Todo esto como resultante de la venta del terreno actual.</p>
+      <p>Buscar una ubicación nueva y mucho más económica que la actual, a una distancia no mayor a 20-30 minutos de la actual. Construir allí las nuevas instalaciones con una arquitectura sustentable, infraestructura moderna, flexible y que esté al servicio de las necesidades para una educación de calidad y excelencia, inclusiva y diversa, en un contexto judeo-sionista integral. Que la búsqueda genere, como resultante de la venta del terreno actual un fondo para financiar las necesidades económicas que afrontamos cada año para cumplir nuestras metas del proyecto educativo y para apoyar la labor que realiza la Fundación Fobeju para estos fines.</p>
     </div>
     <div class="col-md-2">
-      <h4><a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Volver</a></h4>
+      <h4><a href="atid.html"><i class="fa fa-angle-left" aria-hidden="true"></i> Volver</a></h4>
     </div>
   </div>
 </section>
