--- a/vaad-hajinuj.html
+++ b/vaad-hajinuj.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,16 @@
     <![endif]-->
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80359842-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="vaad">
 <nav class="navbar navbar-default">
@@ -39,15 +49,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="en-que-hemos-avanzado.html">¿En qué hemos avanzado?</a></li>
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
         <li><a href="kinus.html">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -58,17 +68,17 @@
   <div class="col-md-8 col-md-offset-2 text-center contenido">
     <h1>Vaad Hajinuj</h1>
     <hr>
-    <p>Su misión estratégica es dar orientaciones formativas, fijar los objetivos y metas educativas, establecer las políticas corporativas, líneas de acción y directrices de acuerdo a los principios que define la Comisión de Educación de la Comunidad Judía de Chile.</p>
+    <p>El Vaad Hajinuj es el máximo organismo del Instituto Hebreo. Su misión estratégica es la de dar las orientaciones formativas, fijar los objetivos y metas educativas; velar por su adecuada ejecución y cumplimiento, estableciendo las políticas corporativas.</p>
   </div>
 </header>
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
         <div class="row col-md-12">
         <div class="col-md-10">
-        <p>Al Vaad Hajinuj le corresponde por una parte, gestionar profesional y ejecutivamente las instituciones comunitarias de Educación en Chile, a fin de lograr cualitativa y cuantitativamente las metas y objetivos, en el conjunto de entidades educativas judeosionistas, como de cada una de ellas, operando como unidades autónomas, independientes y a la vez, relacionadas e integradas. </p>
+          <p>Sigamos transformando al Hebreo en el Orgullo de nuestra Comunidad, en un proceso continuo, apoyando la continuidad de un sistema educacional de calidad y excelencia que permita seguir formando, académica y valóricamente, a generaciones de personas íntegras, comprometidas con su comunidad y con la sociedad.</p>
         </div>
-        <div class="col-md-2 text-center">
-        <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/>
+        <div class="col-md-2 text-center logo-vaad">
+        <img src="images/logo-vaad-hajinuj.png" alt="Logo Vaad Hajinuj"/>
         </div>
       </div>
 <div class="col-md-12">
@@ -76,17 +86,17 @@
 </div>
             <div class="col-md-4">
         <p><strong>Misión Estatutaria</strong></p>
-        <p>El Vaad Hajinuj es una Corporación Educacional de Derecho Privado, sin fines de lucro que tiene como principal finalidad “velar para que los hijos de  los miembros de la Comunidad Judía de toda la República, se eduquen en el espíritu nacional chileno y reciban, además de la educación comprendida en los programas oficiales de estudio, una educación de cultura y tradiciones judías”. </p>
+        <p>El Vaad Hajinuj es una Corporación Educacional de Derecho Privado, sin fines de lucro que tiene como principal finalidad &ldquo;velar para que los hijos de  los miembros de la Comunidad Judía de toda la República, se eduquen en el espíritu nacional chileno y reciban, además de la educación comprendida en los programas oficiales de estudio, una educación de cultura y tradiciones judías&rdquo;.  </p>
       </div>
             <div class="col-md-4">
         <p><strong>Misión Estratégica</strong></p>
-        <p>El Vaad Hajinuj es el máximo organismo del Instituto Hebreo. Su misión estratégica es la de dar las orientaciones formativas, fijar los objetivos y metas educativas; velar por su adecuada ejecución y cumplimiento, estableciendo las políticas corporativas.
-Responsable del control de gestión, aprobación del presupuesto anual y de proveer los recursos necesarios para llevar adelante el Proyecto Educativo Institucional del Instituto Hebreo.</p>
+        <p>El Vaad Hajinuj es el máximo organismo del Instituto Hebreo. Su misión estratégica es la de dar las orientaciones formativas, fijar los objetivos y metas educativas; velar por su adecuada ejecución y cumplimiento, estableciendo las políticas corporativas.<br>
+          Responsable del control de gestión, aprobación del presupuesto anual y de proveer los recursos necesarios para llevar adelante el Proyecto Educativo Institucional del Instituto Hebreo.</p>
       </div>
             <div class="col-md-4">
         <p><strong>Visión</strong></p>
-        <p>Posicionar y proyectar al Instituto Hebreo como la principal Institución Educativa, orgullo de la Comunidad Judía en Chile y como referente de innovación educativa a nivel nacional.
-La Identidad Judía, la Excelencia Académica y la Formación Valórica son los pilares fundamentales de una educación inclusiva, en un clima escolar amigable y de respeto entre todos sus miembros.</p>
+        <p>Posicionar y proyectar al Instituto Hebreo como la principal Institución Educativa, orgullo de la Comunidad Judía en Chile y como referente de innovación educativa a nivel nacional.<br>
+          La Identidad Judía, la Excelencia Académica y la Formación Valórica son los pilares fundamentales de una educación inclusiva, en un clima escolar amigable y de respeto entre todos sus miembros.</p>
       </div>
     <div class="col-md-12">
     <hr>
@@ -110,7 +120,7 @@ La Identidad Judía, la Excelencia Académica y la Formación Valórica son los 
       <h4>Descargar Estatutos Vaad Hajinuj</h4>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
+      <h4><a href="documentos/estatuto_vaad_2012.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
     </div>
     <div class="col-md-12">
       <hr>
@@ -119,7 +129,7 @@ La Identidad Judía, la Excelencia Académica y la Formación Valórica son los 
       <h4>Descargar Memoria de Gestión Vaad Hajinuj 2012 - 2013</h4>
     </div>
     <div class="col-md-2 text-right">
-      <h4><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
+      <h4><a href="documentos/memoria_de_gestion_vaad_hajinuj_2012-2013.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </h4>
     </div>
     <div class="col-md-12">
       <hr>
