--- a/kinus.html
+++ b/kinus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,16 @@
     <![endif]-->
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80359842-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="kinus">
 <nav class="navbar navbar-default">
@@ -39,15 +49,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="en-que-hemos-avanzado.html">¿En qué hemos avanzado?</a></li>
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
         <li><a href="kinus.html">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -58,52 +68,52 @@
   <div class="col-md-8 col-md-offset-2 text-center">
     <h1>Kinus</h1>
     <hr>
-    <p>De acuerdo a los estatutos de la Corporación, para llamar a Asamblea Extraordinaria de socios (Kinus), el primer paso es constituir un Comité Electoral de manera de formalizar y garantizar el proceso.</p>
+    <p>La Asamblea General de Socios (Kinus) es la autoridad máxima y órgano resolutivo superior de la Corporación y representa al conjunto de sus Socios.</p>
   </div>
 </header>
 <section class="container-fluid">
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
     <div class="col-md-12">
-      <p>Este Comité Electoral se constituyó el 20 de mayo de 2016 y debe contar con 5 integrantes, que ya fueron designados:</p>
+      <p>De acuerdo a los Estatutos del Vaad Hajinuj, para convocar a Asamblea Extraordinaria de socios (Kinus), el primer paso es constituir un Comité Electoral de manera de formalizar y garantizar el proceso. Este Comité Electoral se constituyó el 20 de mayo de 2016 y debe contar con 5 integrantes, que ya fueron designados:</p>
       <h4>3 delegados de la Comunidad Judía de Chile: </h4>
     </div>
     <div class="col-md-12">
     <hr>
     </div>
     <article>
-      <div class="col-md-2 text-left"> <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/> </div>
+      <div class="col-md-2 text-left"> <img src="images/lcohen.jpg" alt="Logo Vaad Hajinuj"/> </div>
       <div class="col-md-8">
         <h4>LEÓN COHEN,</h4>
         <p>Presidente de la CJCh. </p>
       </div>
       <div class="col-md-2 text-right">
-        <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
+        <p><a href="documentos/LeonCohen.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
       </div>
       <div class="col-md-12">
         <hr>
       </div>
     </article>
     <article>
-      <div class="col-md-2 text-left"> <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/> </div>
+      <div class="col-md-2 text-left"> <img src="images/tomas_guendelman.jpg" alt="Logo Vaad Hajinuj"/> </div>
       <div class="col-md-8">
         <h4>TOMÁS GUENDELMAN, </h4>
         <p>ex presidente del Vaad Hajinuj </p>
       </div>
       <div class="col-md-2 text-right">
-        <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
+        <p><a href="documentos/tomas_guendelman.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
       </div>
       <div class="col-md-12">
         <hr>
       </div>
     </article>
         <article>
-      <div class="col-md-2 text-left"> <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/> </div>
+      <div class="col-md-2 text-left"> <img src="images/daniel_contreras.jpg" alt="Logo Vaad Hajinuj"/> </div>
       <div class="col-md-8">
         <h4>DANIEL CONTRERAS, </h4>
         <p>miembro del directorio de la CJCh.</p>
       </div>
       <div class="col-md-2 text-right">
-        <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
+        <p><a href="documentos/#" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
       </div>
       <div class="col-md-12">
         <hr>
@@ -116,13 +126,13 @@
     <hr>
     </div>
     <article>
-      <div class="col-md-2 text-left"> <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/> </div>
+      <div class="col-md-2 text-left"> <img src="images/rony_zimerman.jpg" alt="Logo Vaad Hajinuj"/> </div>
       <div class="col-md-8">
         <h4>RONY ZIMERMAN, </h4>
         <p>abogado y activo dirigente comunitario. </p>
       </div>
       <div class="col-md-2 text-right">
-        <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
+        <p><a href="documentos/rony_zimerman.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
       </div>
       <div class="col-md-12">
         <hr>
@@ -135,21 +145,21 @@
     <hr>
     </div>
     <article>
-      <div class="col-md-2 text-left"> <img src="http://placehold.it/150/b9263a/fff?text=Logo Vaad Hajinuj" alt="Logo Vaad Hajinuj"/> </div>
+      <div class="col-md-2 text-left"> <img src="images/Ezequiel-Klas-1.jpg" alt="Logo Vaad Hajinuj"/> </div>
       <div class="col-md-8">
         <h4>ALBERTO KIRBERG, </h4>
         <p>ex Presidente de la Corporación, quien tuvo la posibilidad de participar en el proceso de cambio desde Macul a Avenida Las Condes. </p>
       </div>
       <div class="col-md-2 text-right">
-        <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
+        <p><a href="documentos/alberto_kirberg_ancelovici.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar CV.</a> </p>
       </div>
       <div class="col-md-12">
         <hr>
       </div>
     </article>
      <div class="col-md-12">
-      <p>El Comité Electoral define, basado en los Estatutos del Vaad Hajinuj, cómo se reparten los votos de los socios institucionales (Comunidades), y cómo se asignan los votos de los socios individuales (apoderados). El 50% de los votos están asignados a los Socios Individuales y el otro 50% a los Socios Institucionales. Los Socios Individuales son todos los apoderados del Instituto Hebreo. El voto de los Socios Institucionales se divide en dos: un 25% corresponde a las Instituciones Comunitarias que han aportado económicamente a nuestra Institución, y un 25% corresponde a aquellas Instituciones Comunitarias que han aportado culturalmente a nuestra Institución.
-El mandato sólo es aprobado si un 67% del universo electoral total vota a favor de la propuesta del Vaad Hajinuj. Es un quórum alto, que asegura legitimidad a la decisión.</p>
+      <p>El Comité Electoral define, basado en los Estatutos del Vaad Hajinuj, cómo se reparten los votos de los socios institucionales (Comunidades), y cómo se asignan los votos de los socios individuales (apoderados). El 50% de los votos están asignados a los Socios Individuales y el otro 50% a los Socios Institucionales. Los Socios Individuales son todos los apoderados del Instituto Hebreo. El voto de los Socios Institucionales se divide en dos: un 25% corresponde a las Instituciones Comunitarias que han aportado económicamente a nuestra Institución, y un 25% corresponde a aquellas Instituciones Comunitarias que han aportado culturalmente a nuestra Institución.<br>
+       El mandato sólo es aprobado si un 67% del universo electoral total vota a favor de la propuesta del Vaad Hajinuj. Es un quórum alto, que asegura legitimidad a la decisión.</p>
     </div>
   </div>
 </section>
