--- a/noticias.html
+++ b/noticias.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Atid - Instituto Hebreo</title>
+<title>Atid - Noticias</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/carousel_fade.css" rel="stylesheet" type="text/css" media="screen">
@@ -26,6 +26,16 @@
     <![endif]-->
 <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
 <script src="jQueryAssets/jquery.ui-1.10.4.accordion.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80359842-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="noticias sin-fondo">
 <nav class="navbar navbar-default">
@@ -39,15 +49,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a href="atid.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">ATID<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="que-hemos-hecho.html">¿Qué Hemos Hecho?</a></li>
+            <li><a href="en-que-hemos-avanzado.html">¿En qué hemos avanzado?</a></li>
             <li><a href="nuestra-propuesta.html">Nuestra Propuesta</a></li>
           </ul>
         </li>
         <li><a href="kinus.html">Kinus</a></li>
         <li><a href="vaad-hajinuj.html">Vaad Hajinuj</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
         <li><a href="noticias.html">Noticias</a></li>
-        <li><a href="https://www.facebook.com/ATID-278534049160929/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.facebook.com/ATID-278534049160929/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -64,13 +74,13 @@
   <div class="col-md-10 col-md-offset-1 fondo_blanco contenido">
   <article>
     <div class="col-md-2">
-      <p>27 / 05 / 2016 </p>
+      <p>24 / 06 / 2016</p>
     </div>
     <div class="col-md-8">
-      <p><strong>Vaad Hajinuj busca respaldo para cambio de ubicación del Instituto Hebreo</strong></p>
+      <p><strong>Comunicación del Vaad Hajinuj sobre fecha del Kinus</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="que-hemos-hecho.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+      <p><a href="documentos/Fecha-Kinus.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
         <div class="col-md-12">
       <hr>
@@ -79,14 +89,13 @@
     <article>
 
     <div class="col-md-2">
-      <p>06 / 05 / 2016<br>
-      </p>
+      <p>10 / 06 / 2016</p>
     </div>
     <div class="col-md-8">
-      <p><strong>Comunicación del Vaad Hajinuj</strong></p>
+      <p><strong>La CJCh asume rol fundamental en el proyecto Atid</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
+      <p><a href="documentos/La-CJCh-asume-rol-fundamental-en-el-proyecto-Atid-–-La-Palabra-Israelita.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
 
     <div class="col-md-12">
@@ -95,13 +104,13 @@
     </article>
     <article>
     <div class="col-md-2">
-      <p>06 / 05 / 2016 </p>
+      <p>10 / 06 / 2016</p>
     </div>
     <div class="col-md-8">
-      <p><strong>HISTÓRICO: Instituto Hebreo y Estadio Israelita Maccabi sueñan juntos el futuro de la Comunidad</strong></p>
+      <p><strong>Llamado a Kinus genera alto interés de padres y alumnos</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
+      <p><a href="documentos/Llamado-a-Kinus-genera-alto-interés-de-padres-y-alumnos-–-La-Palabra-Israelita.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
     
     <div class="col-md-12">
@@ -110,13 +119,13 @@
     </article>
     <article>
     <div class="col-md-2">
-      <p>06 / 05 / 2016 </p>
+      <p>03 / 06 / 2016</p>
     </div>
     <div class="col-md-8">
-      <p><strong>Llamado a Kinus genera alto interés de padres y alumnos</strong></p>
+      <p><strong>HISTÓRICO: Instituto Hebreo y Estadio Israelita Maccabi sueñan juntos el futuro de la Comunidad</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Ver detalle</a> </p>
+      <p><a href="documentos/HISTÓRICO_-Instituto-Hebreo-y-Estadio-Israelita-Maccabi-sueñan-juntos-el-futuro-.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Descargar</a> </p>
     </div>
     <div class="col-md-12">
       <hr>
@@ -124,18 +133,32 @@
     </article>
     <article>
     <div class="col-md-2">
-      <p>06 / 05 / 2016 </p>
+      <p>27 / 05 / 2016</p>
     </div>
     <div class="col-md-8">
-      <p><strong>La CJCh asume rol fundamental en el proyecto Atid</strong></p>
+      <p><strong>Vaad Hajinuj busca respaldo para cambio de ubicación del Instituto Hebreo</strong></p>
     </div>
     <div class="col-md-2 text-right">
-      <p><a href="nuestra-propuesta.html"><em class="fa fa-angle-right" aria-hidden="true"></em> Ver detalle</a></p>
+      <p><a href="documentos/Vaad-Hajinuj-busca-respaldo-para-cambio-de-ubicación-del-Instituto-Hebreo-–-La-P.pdf" target="_blank"><em class="fa fa-file-pdf-o" aria-hidden="true"></em> Descargar</a></p>
     </div>
     <div class="col-md-12">
       <hr>
     </div>
     </article>
+    <article>
+    <div class="col-md-2">
+      <p>06 / 05 / 2016</p>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Comunicación del Vaad Hajinuj</strong></p>
+    </div>
+    <div class="col-md-2 text-right">
+      <p><a href="documentos/06_mayo.pdf" target="_blank"><em class="fa fa-file-pdf-o" aria-hidden="true"></em> Descargar</a></p>
+    </div>
+    <div class="col-md-12">
+      <hr>
+    </div>
+    </article>    
   </div>
 </section>
 <footer class="fondo_celeste footer">
